--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -3,6 +3,7 @@
 #app {
   width: 100%;
   min-height: 100vh;
+  min-height: 100dvh;
   margin: 0;
   padding: 0;
   font-weight: normal;
